2002-11-01  Sebastien Pouliot  <spouliot@videotron.ca>

	* bouncycastle.txt: Bouncy Castle JCE License.
	* SHA384Managed.cs: Hash implementation based on BouncyCastle JCE.
	* SHA512Managed.cs: Hash implementation based on BouncyCastle JCE.

2002-10-30  Sebastien Pouliot  <spouliot@videotron.ca>

	* DSASignatureDeformatter.cs: Fully implemented - however it 
	requires a functionnal DSA implementation to work.
	* DSASignatureFormatter.cs: Fully implemented - however it 
	requires a functionnal DSA implementation to work.

2002-10-25  Sebastien Pouliot  <spouliot@videotron.ca>

	* PasswordDeriveBytes.cs: New. PKCS#5 key derivation (PBKDF1) works up to
	HashSize length (but MS support longer keys)

2002-10-24  Sebastien Pouliot  <spouliot@videotron.ca>

	* RSACryptoServiceProvider.cs: New. Implemented most logic expect crypto 
	* RSAOAEPKeyExchangeDeformatter.cs: New. Stub.
	* RSAOAEPKeyExchangeFormatter.cs: New. Stub.
	* RSAPKCS1KeyExchangeDeformatter.cs: New. Stub.
	* RSAPKCS1KeyExchangeFormatter.cs: New. 98% implemented but still
	require RSA.DecryptValue (not supported in MS .NET Framework)
	* RSAPKCS1SignatureDeformatter.cs: New. Stub.
	* RSAPKCS1SignatureFormatter.cs: New. Stub.

2002-10-23  Sebastien Pouliot  <spouliot@videotron.ca>

	* SymmetricAlgorithm.cs: Fixed CFB mode (do encryption while decrypting!)
	* TripleDESCryptoServiceProvider.cs: Ajusted for CFB.

2002-10-22  Sebastien Pouliot  <spouliot@videotron.ca>

	* RjindaelManaged.cs: Fixed decryption for 192 and 256 bit block size

2002-10-21  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* RC2CryptoServiceProvider.cs: fixed end of lines (changed from \r
	to \n).

2002-10-20  Sebastien Pouliot  <spouliot@videotron.ca>

	* SymmetricAlgorithm.cs: Added better Dispose support
	* DES.cs: Now only contains the abstract DES class.
	* DESCryptoServiceProvider.cs: Added the DESTransform class (inherited
	from SymmetricTransform) based the old DESCore and DESTransformBase code